[package]
name = "powco"
version = "0.1.3"
edition = "2018"
description = "Rust Client for Pow.co HTTP & Websockets APIs"
homepage = "https://onchain.sv/1PhzehjmBy1AaT5No3NzPfTKYWamGno9Aj"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sv = { version = "0.2" }
bitcoin = { version = "0.27.1" }
secp256k1 = { version = "0.22.2", features = ["rand", "bitcoin_hashes"] }
rand = { version = "0.6", features = ["std"] }
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
